@@ -1,17 +1,16 @@
 package cn.dsc.jk.service.impl;
 
+import cn.dsc.jk.dto.systemconfig.SystemConfigConvert;
 import cn.dsc.jk.dto.systemconfig.SystemConfigItem;
 import cn.dsc.jk.entity.SystemConfigEntity;
 import cn.dsc.jk.exception.BizException;
 import cn.dsc.jk.mapper.SystemConfigMapper;
 import cn.dsc.jk.service.SystemConfigService;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
-import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 系统配置服务实现类
@@ -24,11 +23,7 @@ public class SystemConfigServiceImpl extends ServiceImpl<SystemConfigMapper, Sys
     @Override
     public List<SystemConfigItem> listAll() {
         List<SystemConfigEntity> entities = this.list();
-        return entities.stream().map(entity -> {
-            SystemConfigItem item = new SystemConfigItem();
-            BeanUtils.copyProperties(entity, item);
-            return item;
-        }).collect(Collectors.toList());
+        return entities.stream().map(SystemConfigConvert.FU_TO_ITEM).toList();
     }
 
     @Override
@@ -40,14 +35,10 @@ public class SystemConfigServiceImpl extends ServiceImpl<SystemConfigMapper, Sys
         if (configValue == null) {
             throw new BizException("配置值不能为空");
         }
-        SystemConfigEntity entity = this.lambdaQuery()
-                .eq(SystemConfigEntity::getConfigKey, configKey)
-                .last("LIMIT 1")
-                .one();
-        if (entity == null) {
+        int rows = this.baseMapper.updateValueByKey(configKey, configValue);
+        if (rows == 0) {
             throw new BizException("配置不存在: " + configKey);
         }
-        entity.setConfigValue(configValue);
-        this.updateById(entity);
     }
 }
+
